fixed banner position of image and format fixed spacing vertical for tabs

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -9,7 +9,7 @@
 }
 
 .dashboard_header-text {
-  margin-left: $lg;
+  margin-left: 60px;
 }
 
 .dashboard-header-image {
